fix(footer): increase line-height to give footer text a bit more space when wrapped

--- a/src/components/starter/footer/footer.module.css
+++ b/src/components/starter/footer/footer.module.css
@@ -12,6 +12,7 @@
   padding: 0 20px;
   background-color: var(--qwik-dark-background);
   text-align: center;
+  line-height: 1.4;
 }
 
 .github {
